--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -2,58 +2,38 @@
   List of Employees
 </h3>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Emp No</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>City</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let emp of employees">
-      <td>{{ emp.id }} </td>
-      <td>{{ emp.empNo }} </td>
-      <td>{{ emp.firstName }} </td>
-      <td>{{ emp.lastName }} </td>
-      <td>{{ emp.city }} </td>
-      <td>
-        <input type="submit" value="Show Details" 
-          class="btn btn-info" (click)="showEmpDetails($event, emp)" />
-      </td>
-    </tr>
-  </tbody>
-</table>
+<p-table [columns]="cols" [value]="employees" 
+      selectionMode="single" [(selection)]="selectedEmployee" 
+      [paginator]="true" [rows]="5">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of columns">
+                {{col.header}}
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+            <td *ngFor="let col of columns">
+                {{rowData[col.field]}}
+            </td>
+        </tr>
+    </ng-template>
+    
+</p-table>
 
-<!-- <p>Enter city</p>
-<input type="text" [(ngModel)]="cityName" />
 
-<input type="text" [value]="cityName" />
-
-<input type="text" [value]="cityName" />
-
-<input type="submit" value="Change City" 
-        (click)="changeCity($event)" />
-
-        {{ cityName }}
-        {{ cityName }}
-        {{ cityName }} -->
-
-<div class="row">
-  <div class="col-md-6">
+<div>
+  <div>
     <app-emp-create (empCreated)="onEmployeeCreated($event)">
       
     </app-emp-create>
   </div>
 
-  <div class="col-md-6">
+  <div>
     <app-emp-details [employee]="selectedEmployee" >
 
     </app-emp-details>
   </div>
  
-
 </div>
