--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,13 @@
 <mat-sidenav-container>
     <mat-sidenav mode="side" opened="true" #sn>
         <mat-nav-list>
-            <a mat-list-item> Employees </a>
-            <a mat-list-item> About </a>
+            <a mat-list-item routerLink="/"> Home </a>
+            <a mat-list-item routerLink="/employees"> Employees </a>
+            <a mat-list-item routerLink="/about"> About </a>
         </mat-nav-list>
     </mat-sidenav>
     
     <mat-sidenav-content>
-        <app-employees></app-employees>
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
