With routing enabled -

--- a/src/app/emp-details/emp-details.component.html
+++ b/src/app/emp-details/emp-details.component.html
@@ -1,3 +1,8 @@
+<button mat-raised-button color="accent" 
+    (click)="goBack()">
+    Go Back
+</button>
+
 <mat-card *ngIf="employee">
   <mat-card-title>
     Employee Details
