--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <span>Limetools</span>
 </mat-toolbar>
 
-<mat-sidenav-container>
+<mat-sidenav-container fullscreen>
     <mat-sidenav mode="side" opened="true" #sn>
         <mat-nav-list>
             <a mat-list-item routerLink="/"> Home </a>
